--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,8 @@
   },
   "include": [
     "src/**/*.ts",
+    "src/**/**/*.ts",
+    "src/**/**/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
     "src/**/**/*.vue",
