--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/cli-plugin-typescript": "^3.0.0-beta.15",
     "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
+    "@vue/devtools": "^4.1.5",
     "@vue/test-utils": "^1.0.0-beta.16",
     "chai": "^4.1.2",
     "stylus": "^0.54.5",
