--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
+    "vue-input-autowidth": "^1.0.2",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
