--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-watch": "vue-cli-service build-watch"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
     "vue-input-autowidth": "^1.0.2",
