--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
-    "vue": "^2.5.16",
+    "rxjs": "^6.4.0",
+    "vue": "^2.6.8",
     "vue-class-component": "^6.0.0",
     "vue-input-autowidth": "^1.0.2",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
+    "vue-rx": "^6.1.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
