--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-watch": "vue-cli-service build-watch"
   },
   "dependencies": {
+    "eslint-config-airbnb": "^17.1.0",
     "lodash": "^4.17.11",
     "rxjs": "^6.4.0",
     "vue": "^2.6.8",
@@ -36,7 +37,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-build-watch": "^1.0.0",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.6.8"
   },
   "vue": {
     "baseUrl": "",
