--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@vue/devtools": "^4.1.5",
     "@vue/test-utils": "^1.0.0-beta.16",
     "chai": "^4.1.2",
+    "prettier": "1.16.4",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-build-watch": "^1.0.0",
