--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "build-watch": "vue-cli-service build-watch"
+    "build-watch": "vue-cli-service build-watch",
+    "format": "prettier --print-width 80 --no-semi --single-quote --trailing-comma es5 --write src/**/*.ts"
   },
   "dependencies": {
     "eslint-config-airbnb": "^17.1.0",
